Création d'un fichier JS et CSS, Premier squelette

--- a/Icelist.html
+++ b/Icelist.html
@@ -1,3 +1,39 @@
-salam
-bonjkoue
-ntm sale batard
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ICE Team GD</title>
+    <link rel="stylesheet" href="icelist.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="logo">❄️ ICE List</div>
+            <ul>
+                <li><a href="#home">Accueil</a></li>
+                <li><a href="#team">Équipe</a></li>
+                <li><a href="#list">List</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="https://discord.gg/fzfuhdsofsofdosufhs" target="_blank" class="btn">Rejoindre Discord</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="home" class="hero">
+            <h1>❄️ Bienvenue sur le site de la ICE Team GD ❄️</h1>
+           
+            <div class="ice-overlay"></div>
+        </section>
+
+        
+    </main>
+
+    <footer>
+        <p>&copy; 2024 ICE Team - Tous droits réservés</p>
+    </footer>
+    <script src="icelist.js"></script>
+</body>
+</html>
